# wandr-host

./: .gitignore  .gitmodules  BUILD.md  Cargo.toml  NOTICE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml
cpp/: sf_probe.bp  sf_probe.cpp  sf_surface.bp  sf_surface.cpp  sf_surface.h  wasi_drawable.cpp  wasi_drawable.h
crates/wandr-video/: Cargo.toml
crates/wandr-video/src/: convert.rs  lib.rs
crates/wandr-video/src/backends/: d3d11.rs  dav1d.rs  hevc.rs  hevc_dxva.rs  libde265.rs  libvpx.rs  mod.rs  openh264.rs  oxideav_h265.rs  vaapi.rs  videotoolbox.rs
crates/wandr-video/tests/: bench_sw.rs  color_matrix.rs  d3d11_hw.rs  h264.rs  h264_pts_pairing.rs  playback.rs  roundtrip.rs  vaapi_hw.rs  videotoolbox_hw.rs
crates/wandr-vpx-sys/: Cargo.toml  build.rs  ffi.h
crates/wandr-vpx-sys/src/: lib.rs
scripts/: build-host-android.sh  build-host-linux.sh  build-host-macos.sh  build-host-windows.bat  build-libvpx.sh  env-android.sh  libvpx-env.sh
src/: alarm_host_impl.rs  app_installer.rs  app_loader.rs  app_role.rs  arbiter_sock.rs  assets_impl.rs  async_app.rs  audio_caps.rs  audio_desktop.rs  audio_focus_host_impl.rs  audio_impl.rs  audio_policy_impl.rs  audio_routing.rs  binder.rs  binder_aidl.rs  binder_shared_memory.rs  bionic_compat.rs  canvas_impl.rs  clipboard_impl.rs  connectivity_wifi_impl.rs  consolidated_impl.rs  crypto.rs  crypto_host_impl.rs  display_geometry_impl.rs  display_impl.rs  egl.rs  eventfd_signal.rs  events_host_impl.rs  haptics_impl.rs  host_clock.rs  ime_host_impl.rs  ime_impl.rs  ime_inbound.rs  input.rs  keyboard_host_impl.rs  keyguard_host_impl.rs  launcher_impl.rs  lib.rs  lifecycle_impl.rs  lifecycle_standalone.rs  (+34 more)
tools/scripts/: run-host-windows.ps1
