[package]
name    = "wasm-android-host"
version = "0.1.0"
edition = "2021"

# Build for Android APK: cargo apk build --release
# Build for desktop:     cargo build --release

[lib]
name      = "wasm_android_host"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wasm-android-host"
path = "src/main.rs"

[dependencies]
wasmtime           = { version = "45", features = ["component-model"] }
wasmtime-wasi      = { version = "45" }
# Task 66 — host-delegated TLS for guests with Signal's pinned CA trusted.
# wasmtime-wasi-tls provides the wasi:tls@0.2.0-draft host impl; the
# rustls/tokio-rustls/webpki-roots/rustls-pemfile stack builds the custom
# TlsProvider trust store (public roots + Signal CA) in signal_tls.rs. Versions
# mirror wasmtime/crates/wasi-tls so there's one copy of each at the trait edge.
# tokio (rt) here so the provider's tokio-rustls types resolve on all targets;
# the android section already pulls tokio for binder — features union.
wasmtime-wasi-tls  = { version = "45" }
rustls             = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging"] }
tokio-rustls       = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
webpki-roots       = "0.26"
rustls-pemfile     = "2"
tokio              = { version = "1", features = ["rt"] }
anyhow             = "1"
log                = "0.4"
# Shared sensor HAL (task 77) — the ISensorManager path, also used by the
# arbiter's sensor driver. Cross-platform (off-android = no-op stubs).
wandr-hal-sensors  = { path = "../wandr-hal-sensors" }
android_logger     = { version = "0.14", optional = true }
env_logger         = { version = "0.11", optional = true }
raw-window-handle  = "0.6"
icu_segmenter      = "2"
# mmap primitive for binder SharedFileRegion-style buffers (IAAudioService
# ring buffers in task 21; reused later by camera + codec2). Cross-platform
# so binder_shared_memory's host-side memfd round-trip test runs on the
# Linux dev box too — rsbinder coupling lives at the audio_impl call site.
memmap2            = "0.9"
# Raw eventfd / memfd_create syscalls for binder_shared_memory tests and
# the eventfd_signal primitive. libc is already pulled transitively by
# wasmtime, ndk, winit, etc; the explicit dep makes the surface we use
# (eventfd / read / write / memfd_create / sysconf) discoverable.
libc               = "0.2"
# Bytes type used by wasmtime-wasi's OutputStream trait (wandr-host
# implements a custom synchronous logcat sink — see wasi_stderr.rs).
bytes              = "1"
# App installer (task 35): cache-key hashing + package.toml / cache-key.toml
# I/O. `toml` used without serde derive (toml::Value table API).
sha2               = "0.10"
# Task 93 Phase A — wandr:crypto host backend (RustCrypto symmetric core). All on the
# 0.10 generation (digest 0.10 / cipher 0.4 / aead 0.5) already in the tree. On aarch64
# the `aes`/`sha2` crates use the ARMv8 Crypto Extensions when built with `+aes,+sha2`
# (set in .cargo/config.toml) — the in-process HW acceleration (no binder). See crypto.rs.
sha1               = "0.10"
hmac               = "0.12"
aes                = "0.8"
aes-gcm            = "0.10"
ccm                = "0.5"
ctr                = "0.9"
cbc                = { version = "0.1", features = ["alloc"] }
cmac               = "0.7"
chacha20poly1305   = "0.10"
poly1305           = "0.8"
hkdf               = "0.12"
pbkdf2             = { version = "0.12", default-features = false, features = ["hmac"] }
digest             = "0.10"
# Runtime HWCAP detection (aes/sha2/sha1) for the caps `hardware-accelerated` flag.
cpufeatures        = "0.2"
toml               = { version = "0.8", default-features = false, features = ["parse", "display"] }

# skia-safe: GL backend only (no Vulkan needed — EGL gives us GLES)
[dependencies.skia-safe]
version  = "0.93.1"
features = ["gl", "textlayout", "embed-icudtl"]

# winit for window + event loop — android-native-activity on Android
[dependencies.winit]
version  = "0.30"
features = []

[target.'cfg(target_os = "android")'.dependencies]
winit            = { version = "0.30", features = ["android-native-activity"] }
android_logger   = "0.14"
ndk              = "0.9"
ndk-context      = "0.1"
android_system_properties = "0.1"
rsbinder         = { git = "https://github.com/hiking90/rsbinder", rev = "5e999e04a", features = ["android_11_plus"] }   # task 76 #6 trial: does master (0.9.0) decode AudioPortFw?
async-trait      = "0.1"
# tokio current-thread runtime for the BnEventQueueCallback registration
# in sensors_impl.rs. Earlier task-16 work showed that a hand-rolled
# `BinderAsyncRuntime` with a trivial single-poll Waker leaves rsbinder's
# local-binder bookkeeping broken (BR_INCREFS for unknown native id).
# A real tokio runtime is needed even when the callback's onEvent never
# actually awaits anything.
tokio            = { version = "1", features = ["rt"] }
# Task 98 — native AudioFlinger backend (AudioTrack/AudioRecord over binder,
# no AAudioService, no JVM). Decoupled, reusable crate; same rsbinder rev so
# both share one ProcessState. Path dep during integration; switch to the
# codeberg git dep once verified audible on-device.
audioclient      = { package = "audioclient-rs", path = "../../external/audioclient-rs" }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"
winit      = { version = "0.30", features = [] }

[build-dependencies]
cc = "1"
rsbinder-aidl = { git = "https://github.com/hiking90/rsbinder", rev = "5e999e04a" }   # task 76 #6 trial

# Task 98 — rsbinder + recursive Box-array support (2 missing SerializeArray/
# DeserializeArray-for-Box<T> impls on top of 5e999e04a) so the real recursive
# android.content.AttributionSourceState codegens. Needed to send a non-empty
# packageName in createTrack — AudioFlinger's OpPlayAudioMonitor mutes any track
# whose attributionSource.packageName is empty. (Not needed for createTrack itself;
# that was the sessionId bug.) Applies to the whole graph incl. the audioclient crate.
[patch."https://github.com/hiking90/rsbinder"]
rsbinder      = { path = "../../external/rsbinder/rsbinder" }
rsbinder-aidl = { path = "../../external/rsbinder/rsbinder-aidl" }

[features]
default = []
# Task 23 — enable per-frame profiling hooks: ResourceLimiter on memory.grow,
# Store::data_size() snapshot, Store::call_hook host-call counter, and
# wasmtime::GuestProfiler firefox-profiler-JSON dump. Off by default so
# production APK builds stay unaffected.
profile = ["wasmtime/call-hook"]

[package.metadata.android]
package = "com.example.wasmruntime"
assets  = "assets"

[package.metadata.android.sdk]
min_sdk_version    = 30
target_sdk_version = 34

[package.metadata.android.application]
label = "WASM Runtime"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.VIBRATE"

[package.metadata.android.signing.release]
path     = "/home/harry/.android/debug.keystore"
keystore_password = "android"
alias    = "androiddebugkey"
key_password = "android"

