[package]
name = "wandr-video"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Portable video codec backends for wandr:video — VP8/VP9 via libvpx, no FFmpeg."

[features]
# OFF by default so a plain `cargo build` (and the Android cross-build, which
# uses MediaCodec) needs no media library at all. The desktop host turns it on.
default = []
libvpx = ["dep:wandr-vpx-sys"]
# Software H.264 (Cisco OpenH264, BSD-2) — the DESKTOP software fallback for
# H.264 decode/encode. Built from source by openh264-sys2 (cc), so no system
# library. Android decodes H.264 in hardware via MediaCodec and never enables
# this, which is why it is a separate opt-in feature like `libvpx`.
openh264 = ["dep:openh264"]
# Software H.265/HEVC (oxideav-h265, pure-Rust MIT) — the DESKTOP software
# decoder. Fills the H.265 gap task 117 flagged, without LGPL libde265. Android
# decodes HEVC in MediaCodec HW, so this is desktop-only like the others.
oxideav-h265 = ["dep:oxideav-h265"]

[dependencies]
# libvpx (BSD-3), built from vendor/libvpx and linked statically by wandr-vpx-sys.
# That crate replaced env-libvpx-sys (MPL-2.0, and structurally unable to BUILD
# libvpx — it could only consume a prebuilt one), so a plain `cargo build` now
# needs no system media library and no pre-build step.
wandr-vpx-sys = { path = "../wandr-vpx-sys", optional = true }
openh264 = { version = "0.9", optional = true }
# Pure-Rust HEVC decoder (MIT). We depend ONLY on the codec crate — oxideav's
# registry and its unfinished HW backends are not used. Pinned to the version the
# spike verified (300/300 on a real HEVC MP4).
oxideav-h265 = { version = "=0.0.9", optional = true }
# Pure-Rust SIMD colorspace + resize — the libswscale replacement. These are pure
# Rust (no system library, cross-compiles anywhere), so they are NOT gated: the
# shared types and conversion helpers stay available on every target.
yuv = "0.8"
fast_image_resize = "6.0"
log = "0.4"

# The round-trip tests need a real codec, so they are skipped by a bare
# `cargo test` rather than failing it.
[[test]]
name = "roundtrip"
required-features = ["libvpx"]

[[test]]
name = "playback"
required-features = ["libvpx"]

[[test]]
name = "h264"
required-features = ["libvpx", "openh264"]
