[package]
name = "wandr-video"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Portable video codec backends for wandr:video — VP8/VP9 via libvpx, no FFmpeg."

[features]
# OFF by default so a plain `cargo build` (and the Android cross-build, which
# uses MediaCodec) needs no media library at all. The desktop host turns it on.
default = []
libvpx = ["dep:wandr-vpx-sys"]
# Software H.264 (Cisco OpenH264, BSD-2) — the DESKTOP software fallback for
# H.264 decode/encode. Built from source by openh264-sys2 (cc), so no system
# library. Android decodes H.264 in hardware via MediaCodec and never enables
# this, which is why it is a separate opt-in feature like `libvpx`.
openh264 = ["dep:openh264"]
# Software H.265/HEVC (oxideav-h265, pure-Rust MIT) — the DESKTOP software
# decoder. Fills the H.265 gap task 117 flagged, without LGPL libde265. Android
# decodes HEVC in MediaCodec HW, so this is desktop-only like the others.
oxideav-h265 = ["dep:oxideav-h265"]
# Real-time software H.265/HEVC via libde265 (LGPL-2.1). Built from source and
# linked STATICALLY (no runtime .so). ~60 fps @720p single-thread vs oxideav's
# ~4 fps. LGPL is task 117's third-choice tier — allowed for a real need.
libde265 = ["dep:libde265"]
# Software AV1 via dav1d (VideoLAN, BSD-2). Built from source and linked
# STATICALLY by dav1d-sys's internal meson path (see the note in the dep below).
# ~355 fps @720p vs oxideav-av1 failing on standard matroska framing entirely.
# BSD-2 = task 117's permissive-static tier (cleaner than HEVC's LGPL). Decode
# only; Android decodes AV1 in MediaCodec HW so this stays desktop-only.
dav1d = ["dep:dav1d"]
# HARDWARE H.264 decode via VA-API (task 117 M2 stage 3) — the first HW backend.
# OFF by default and deliberately so: unlike every other feature here, this one
# links the SYSTEM libva (`libva.so`, via cros-libva), so enabling it makes the
# host unbuildable without libva headers and unrunnable without the runtime .so.
# The Linux build script turns it on; Android (MediaCodec) and Windows/macOS
# never do. A machine with the feature compiled in but no usable VA driver is
# fine — the backend probes and declines, and software decodes as before.
vaapi = ["dep:cros-codecs", "dep:libva"]

[dependencies]
# libvpx (BSD-3), built from vendor/libvpx and linked statically by wandr-vpx-sys.
# That crate replaced env-libvpx-sys (MPL-2.0, and structurally unable to BUILD
# libvpx — it could only consume a prebuilt one), so a plain `cargo build` now
# needs no system media library and no pre-build step.
wandr-vpx-sys = { path = "../wandr-vpx-sys", optional = true }
openh264 = { version = "0.9", optional = true }
# Pure-Rust HEVC decoder (MIT). We depend ONLY on the codec crate — oxideav's
# registry and its unfinished HW backends are not used. Pinned to the version the
# spike verified (300/300 on a real HEVC MP4).
oxideav-h265 = { version = "=0.0.9", optional = true }
# `static` builds libde265 from source with cc and links it statically; drop the
# default `system` feature so there is no runtime .so dependency.
libde265 = { version = "0.2", default-features = false, features = ["static"], optional = true }
# dav1d-sys builds dav1d from source with meson and links it statically when
# `SYSTEM_DEPS_DAV1D_BUILD_INTERNAL=always` is set in the build env (the wandr
# build scripts set it); no runtime .so. Pinned to the version the AV1 bench
# verified (355 fps on a real AV1 stream, repros/av1-bench).
dav1d = { version = "0.11", optional = true }
# Pure-Rust SIMD colorspace + resize — the libswscale replacement. These are pure
# Rust (no system library, cross-compiles anywhere), so they are NOT gated: the
# shared types and conversion helpers stay available on every target.
yuv = "0.8"
fast_image_resize = "6.0"
log = "0.4"

# VA-API HW decode (feature `vaapi`). cros-codecs supplies the H.264 parser +
# DPB/reference management; cros-libva is the VA binding. Both are Linux-only, so
# they sit in a target table — the Android cross-build and Windows/macOS do not
# even resolve them. Pinned to the versions repros/vaapi-decode-probe verified on
# real hardware (300/300, checked on pixels).
[target.'cfg(all(target_os = "linux", not(target_os = "android")))'.dependencies]
cros-codecs = { version = "0.0.6", features = ["vaapi"], optional = true }
libva = { package = "cros-libva", version = "0.0.12", optional = true }

# The round-trip tests need a real codec, so they are skipped by a bare
# `cargo test` rather than failing it.
[[test]]
name = "roundtrip"
required-features = ["libvpx"]

[[test]]
name = "playback"
required-features = ["libvpx"]

[[test]]
name = "h264"
required-features = ["libvpx", "openh264"]

# Needs a GPU and a real Annex-B sample (WANDR_TEST_H264), so it SKIPS rather than
# fails where either is missing — see the test's own header.
[[test]]
name = "vaapi_hw"
required-features = ["vaapi"]

# Answers "does the backend pair timestamps to the right frames?", which needs a
# container (an elementary stream has no PTS) — hence the mp4 dev-dependency and
# the WANDR_TEST_MP4 sample. Skips without one.
[[test]]
name = "h264_pts_pairing"
required-features = ["openh264"]

[dev-dependencies]
# Demux for the timestamp-pairing test ONLY. The crate itself never parses
# containers — demux is guest-side by design (wasi-media-source/NOTES.md).
mp4 = "0.14"

# This crate is standalone (its own Cargo.lock), so it needs its own patch entry:
# a `[patch]` in the host's Cargo.toml only covers builds that go through the
# host. Same tree, so the two cannot diverge. See vendor/cros-codecs/WANDR-PATCHES.md
# for what is patched and why.
[patch.crates-io]
cros-codecs = { path = "../../vendor/cros-codecs" }
